--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prueba</title>
+  <title>Título de la página</title>  
+  <meta charset="UTF-8">
 </head>
 <body>
-    <h1>no sirvo 2</h1>
+    <header> 
+        <h1>El Encabezado</h1> 
+      </header> 
+      <nav> 
+        <p>Los enlaces de navegación</p> 
+      </nav> 
+      <section> 
+        <p>Sección A</p> 
+      </section> 
+      <section> 
+        <p>Sección B</p> 
+      </section>
+      <aside>
+        <p>Aqui la Publicidad</p>
+      </aside>
+      <footer> 
+        <p>Aqui el Pié de página</p> 
+      </footer> 
+    <br><br><br>
+    <h1>Forms</h1>
+  <form action="#">
+      Usuario:
+      <input type="text" id="usuario">
+      <br>
+      Clave:
+      <input type="password" id="clave">
+      <br>
+      Edad:
+      <input type="text" id="edad" autofocus>
+      <br>
+      <input type="submit" value="Confirmar">
+  </form>
+  <br><br><br>
+  <form action="#">
+    Patente:
+    <input type="text" id="patente" placeholder="NCM23456-6">
+    <br>
+    <input type="submit" value="Aceptar">
+</form>
+<br><br><br>
+<form action="#">
+    Usuario:
+    <input type="text" id="usuario" required>
+    <br>
+    Clave:
+    <input type="password" id="clave" required>
+    <br>
+    <br>
+    <input type="submit">
+</form>
 </body>
 </html>
