--- a/hoja_estilo.html
+++ b/hoja_estilo.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Uso de hoja estilo en archivo</h1>
     <p>A medida que Valorant se ha convertido en un verdadero shooter táctico competitivo, también lo ha hecho su meta, lo que hace más </p>
+    <h2 class="resaltado">Ultilizando un clase en Css (.resaltado)</h2>
 </body>
 </html>
